Miscellaneous progress on namespace support.
* Ported AllTests to fble.
* Started documenting namespace constructs.
* Started adding namespace constructs to parser. No conflicts reported.
* Fixed bug in parsing of expr_s.

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,7 @@ Fble Namespaces:
   - namespace eval
   - namespace import
   - include
+* Convert rest of what's needed for AllTests.fble to fble.
 * Add support for all new constructs to the parser
   - to verify there aren't any conflicts in the grammar.
 * Add support for compiling and evaluating all new constructs.
