Ported rest of what's needed for AllTests.fble.
Just the list tests at this point, but it should be enough to exercise all the
modularity features.

--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -843,6 +843,6 @@ Notes:
   };
 
   Perhaps something like:
-  S@<T@> Append<@ T@>(S@<T@> a, S@<T@> b) {
+  Append<@ T@>(S@<T@> a, S@<T@> b; S@<T@>) {
     ?(a; cons: ConsS<T@>(a.cons.head, Append<T@>(a.cons.tail, b)), nil: b);
   };
