Add support for parsing anonymous struct values.
But only with normal field values. Type fields are not supported yet.

--- a/TODO.txt
+++ b/TODO.txt
@@ -31,6 +31,8 @@ Fble Cleanup:
   exec processes.
 * Clarify spec on partial and excessive function and poly application.
 * Test partial function and excessive function application.
+* Pick a better name for FbleChoice, which is used now for more than just
+  conditional expressions. Maybe FbleNamedValue? NamedExpr?
 
 Fble Performance:
 * Optimize reference counting scheme.
