Add support for compiling anonymous struct values.
And fix a bug in parsing of anonymous struct values.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@ Fble:
   Until AllTests test passes.
   - type fields
   - type field access
-  - anonymous struct value
+  - anonymous struct value with type fields
   - namespace eval
   - namespace import
   - include
