Normal struct values don't take type args.
So remove the grammer rules in the parser that would allow type args to normal
struct values.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,7 @@ Fble:
   - type fields
   - type field access
   - anonymous struct value with type fields
-  - namespace eval
-  - namespace import
+  - namespace eval & import with type fields
   - include
 
 * Port rest of fbld tests and programs to fble.
